--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shorturl",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "description": "API project for freeCodeCamp",
   "main": "server.js",
   "scripts": {
@@ -11,10 +11,15 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "fs": "0.0.1-security"
   },
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LLPeterX/boilerplate-project-urlshortener.git"
   }
 }
