--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shorturl",
-  "version": "0.0.1",
+  "author": "Peter Lebedev",
+  "version": "0.1.0",
   "description": "API project for freeCodeCamp",
   "main": "server.js",
   "scripts": {
@@ -12,7 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "fs": "0.0.1-security"
+    "mongoose": "^5.12.3"
   },
   "license": "MIT",
   "devDependencies": {
